# scala-playground

./: .gitignore  README.md  create-scala-3x-project.sh  create-scala-3x-sprinb-boot-3xproject.sh
accord-wix-fun/: build.sbt
akka/: .classpath  .project
akka-2.5.6-cluster-docker/: .classpath  .project  build.sbt  docker-compose.yml  run.sh
akka-2.6-fun/: build.sbt
akka-26-sbt14-fun/: build.sbt
akka-camel/: .cache-main  .classpath  .project  build.sbt
akka-http-fun/: build.sbt
akka-streams-patterns/: build.sbt
akka-vending-machine/: build.sbt
akkastreams-2.5.7-fun/: .classpath  .project  build.sbt
apollo-fun/: .classpath  .project  pom.xml
asg-simulator/: AsgSimulator.scala
bag-of-cats/: README.md  build.sbt
boundary-break-scala3/: README.md  build.sbt
caliban-graphql-fun/: build.sbt
cats-scala-fp/: .classpath  .project  build.sbt
chronoscala-fun/: build.sbt
circe-fun/: build.sbt
clip-args-fun/: build.sbt
compile-time-validation/: README.md  build.sbt
diffson-fun/: build.sbt
enum-state-machine/: README.md  build.sbt
fatjar-assembly-sbt-1.5.0/: README.md  build.sbt
finch-fun/: build.sbt
fizz-buzz-noif/: build.sbt
gatling-elassandra/: .classpath  .project  build.sbt
generic-json-enum/: README.md  build.sbt
hawt-dispatch-fun/: .classpath  .project  pom.xml
idiomatic-scala/: .classpath  .project  build.sbt
implicitly-3.5/: build.sbt
jdk-15-scala-2-13-sbt-1-4-simple/: build.sbt
monad-box-container/: README.md  build.sbt
monadless-fun/: .classpath  .project  build.sbt
monix-fun/: build.sbt
multi-type-safe-map/: README.md  build.sbt  run.sh
parboiled-scala-2x/: build.sbt
parser-combinator-3.5/: build.sbt
play-2.5-scala-app-sandbox/: .cache-main  .cache-tests  build.sbt
play-2.9-scala-jdk21/: build.sbt  build.sc
play-akka/: build.sbt
play-client-json-rest/: .classpath  .project  build.sbt
play-jasper/: build.sbt
play-rest-json/: build.sbt
play-scala-slick31/: build.sbt
railroad-oriented-error-handling-scala-3x/: build.sbt
reactify-fun/: build.sbt
recursive-enum/: README.md  build.sbt
sbt-1.4.0-fun/: build.sbt
scala-2.10-spring-3.2-playground/: pom.xml
scala-2.12-typeclasses/: .classpath  .project  build.sbt
scala-2.13-15-bazel/: .bazelproject  .sdkmanrc  README.md  WORKSPACE
scala-2.13-15-bazel-scalatest/: README.md  WORKSPACE  build-all.sh
scala-2.13-15-bazel-scalatest-3rdypartydeps/: WORKSPACE  bazel-scala-2.13-15-bazel-scalatest-3rdypartydeps
scala-2.13-15-bazel-scalatest-json4s-pekkohttp/: .bazelproject  WORKSPACE  bazel-scala-2.13-15-bazel-scalatest-json4s-pekkohttp  run.sh  test-all.sh
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/: .bazelproject  WORKSPACE  bazel-scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick  run-postgres-db.sh  run-slick-generate-tables.sh  run-stop-postgres.sh  run.sh
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/cmd/: BUILD.bazel
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/cmd/src/main/resources/: application.conf
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/cmd/src/main/scala/com/github/diegopacheco/scalaplayground/cmd/: DatabaseConfig.scala  PekkoHttpServer.scala  Runner.scala
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/cmd/src/main/scala/com/github/diegopacheco/scalaplayground/db/slick/: Tables.scala
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/db/: BUILD.bazel
scala-2.13-15-bazel-scalatest-json4s-pekkohttp-slick/db/src/main/scala/com/github/diegopacheco/scalaplayground/db/: DBCodeGenRunner.scala
scala-2.13-15-bazel-scalatest-json4s-pekkohttp/lib/: BUILD.bazel
scala-2.13-15-bazel-scalatest/lib/: BUILD.bazel
scala-2.13-15-bazel-scalatest/lib/src/main/scala/com/github/scalaplayground/lib/: Greeting.scala
scala-2.13-bazel/: .bazelproject  .gitignore  .sdkmanrc  BUILD.bazel  WORKSPACE
scala-2.13-bazel/src/main/scala/lib/: BUILD.bazel  Greeting.scala
scala-2.13-benchs/: README.md  build.sbt  run-benchmarks.sh
scala-2.13-json4s-serde/: README.md  build.sbt
scala-2.13-pipes-fun/: build.sbt
scala-2.13-runtime-reification/: build.sbt
scala-2.13.4-sbt-1.4.0-fun/: build.sbt
scala-2x-playground/: README.md  build.sbt
scala-3-6-future-combine/: build.sbt
scala-3-6-future-flatmap-recover/: build.sbt
scala-3-6-given-conversions/: README.md  build.sbt
scala-3-6-ids-poc/: README.md  build.sbt
scala-3-6-typesystems/: build.sbt
scala-3-7-3-java-25-hello-world/: .sdkmanrc  README.md  build.sbt
scala-3-7-3-type-level/: build.sbt
scala-3-anti-patterns/: build.sbt
scala-3-cats-eitherT/: build.sbt
scala-3-cool-enums/: README.md  build.sbt
scala-3-left-right-exceptions/: README.md  build.sbt
scala-3-proof-of-9/: README.md  build.sbt
scala-3-sb-4-java-25-fun/: README.md  build.sbt  run.sh
scala-3-typelevel-programing/: build.sbt
scala-3.3.0-fun/: build.sbt
scala-3.5-backedin-setters/: build.sbt
scala-3.5-basic/: build.sbt
scala-3.5-bazel/: .bazelproject  BUILD.bazel  README.md  WORKSPACE  build.sh  run.sh
scala-3.5-bazel/tools/: BUILD.bazel
scala-3.5-binary-integerliterals/: build.sbt
scala-3.5-dep/: README.md  biggerThan.scala
scala-3.5-enumeratum/: build.sbt
(+1540 files in other folders)
