load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "greeting",
    srcs = glob(["src/main/scala/**/*.scala"]),
    visibility = ["//visibility:public"],
)

scala_test(
    name = "greeting_test",
    srcs = glob(["src/test/scala/**/*.scala"]),
    deps = [
        "//lib:greeting",
        "@maven//:org_scalatest_scalatest_2_13",
    ],
)
