load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")

default_java_toolchain(
    name = "custom_java_toolchain_impl",
    configuration = dict(),
    java_runtime = "@rules_java//toolchains:remotejdk_21",
    source_version = "21",
    target_version = "21",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "custom_java_toolchain",
    toolchain = ":custom_java_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)